--- a/config/config.json
+++ b/config/config.json
@@ -10,8 +10,8 @@
             "field": "kb_viewcount",
             "order": -1
         },
-        "website_title": "WittyPen Support",
-        "show_featured_articles": true,
+        "website_title": "WittyPen Help Center",
+        "show_featured_articles": false,
         "show_featured_in_article": false,
         "featured_articles_count": "4",
         "password_protect": false,
@@ -28,13 +28,13 @@
         },
         "allow_voting": true,
         "google_analytics": "",
-        "theme": "twitter",
-        "show_logon": true,
+        "theme": "",
+        "show_logon": false,
         "add_header_anchors": false,
         "typeahead_search": true,
         "index_article_body": false,
         "enable_spellchecker": true,
-        "show_website_logo": false,
+        "show_website_logo": true,
         "website_description": "Support articles and Knowledge Base for the WittyPen platform.",
         "article_versioning": false,
         "api_auth_token": "",
