--- a/config/config.json
+++ b/config/config.json
@@ -10,7 +10,7 @@
             "field": "kb_viewcount",
             "order": -1
         },
-        "website_title": "WittyPen Help Center",
+        "website_title": "WittyPen Support",
         "show_featured_articles": false,
         "show_featured_in_article": false,
         "featured_articles_count": "4",
